tests/models/enum/named/i8/pass/le.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(le = 2)]
        value: i8
    },
}
fn main() {}
